--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Room"
+rootProject.name = "TP22AndroidRoomViewModelRepoExoJava"
 include ':app'
